8365407: Race condition in MethodTrainingData::verify()

Reviewed-by: kvn, vlivanov, iklam